--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -11,7 +9,6 @@
 # next.js
 /.next/
 /out/
-.swc
 
 # production
 /build
@@ -28,11 +25,15 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*
-
+.env
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+
+# lock files
+package-lock.json
+yarn.lock
